kubernetes/01-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: ambulance-app
  labels:
    name: ambulance-app
