kubernetes/05-sql-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: ambulance-app
spec:
  clusterIP: None        # headless
  selector:
    app: mysql
  ports:
    - port: 3306
      targetPort: 3306
