kubernetes/10-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ambulance-app-ingress
  namespace: ambulance-app
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    acme.cert-manager.io/http01-edit-in-place: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - siddheshwar.duckdns.org
    secretName: ambulance-app-tls-secret
  rules:
  - host: siddheshwar.duckdns.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ambulance-app-service
            port:
              number: 8000
